@@ -1,0 +1,1 @@
+KERNEL="fuse", MODE="0666"
