@@ -1,3 +1,8 @@
+2005-09-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Install UDEV rule file, so /dev/fuse is created with mode 0666.
+	Help from Jens M. Noedler.
+
 2005-09-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Add memory cleanup on thread exit
